[package]
name = "rust-kraken"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "*", features = ["json", "charset", "socks-proxy"] }
anyhow = "1.0.70"
chrono = "0.4.24"
base64 = "0.21.0"
hmac = "0.12.1"
sha2 = "0.10.6"
hmac-sha512 = "1.1.4"